MERGE I5 ES branch [3698]:[3746] into trunk
git-svn-id: https://interproscan.googlecode.com/svn/trunk@3747 ea5da8b0-6d6b-11de-9de6-4d42d2ab87c0