@@ -41,7 +41,7 @@ import java.util.*;
  * java -Dconfig=conf/myconfig.props -jar interproscan-5.jar monitor
  */
 
-public class Run {
+public class Run extends AbstractI5Runner {
 
     private static final Logger LOGGER = Logger.getLogger(Run.class.getName());
 
@@ -58,187 +58,7 @@ public class Run {
      */
     private static final Options COMMAND_LINE_OPTIONS_FOR_HELP = new Options();
 
-    private static final Options COMMAND_LINE_OPTIONS_FOR_CONVERT_MODE_HELP = new Options();
-
-    private static final HelpFormatter HELP_FORMATTER = new HelpFormatter();
-
-    private static final String HELP_MESSAGE_TITLE =
-            "java -XX:+UseParallelGC -XX:+AggressiveOpts -XX:+UseFastAccessorMethods " +
-                    "-Xms512M -Xmx2048M -jar interproscan-5.jar";
-    private static final String HEADER =
-            "\n\nPlease give us your feedback by sending an email to\n\ninterhelp@ebi.ac.uk\n\n";
-    private static final String FOOTER = "Copyright (c) EMBL European Bioinformatics Institute, Hinxton, Cambridge, UK. (http://www.ebi.ac.uk) " +
-            "The InterProScan software itself is " +
-            "provided under the Apache License, Version 2.0 (http://www.apache.org/licenses/LICENSE-2.0.html). " +
-            "Third party components (e.g. member database binaries and models) are subject to separate licensing - " +
-            "please see the individual member database websites for details.\n\n";
-
-// [-Dconfig=/path/to/config.properties]
-
     private static final int MEGA = 1024 * 1024;
-
-    /**
-     * Additional options:
-     * -iprlookup    Switch on look up of corresponding InterPro annotation
-     * <p/>
-     * -goterms      Switch on look up of corresponding Gene Ontology
-     * annotation (requires -iprlookup option to be used too)
-     * <p/>
-     * -pathways    Switch on look up of corresponding Pathway annotation  (requires -iprlookup option to be used too)
-     */
-    private enum I5Option {
-        MODE("mode", "m", false, "Optional, the mode in which InterProScan is being run, the default mode is " + Mode.STANDALONE.getRunnableBean() + ". Must be one of: " + Mode.getCommaSepModeList() + ".", "MODE-NAME", false, false),
-        FASTA("fasta", "i", false, "Optional, path to fasta file that should be loaded on Master startup.", "FASTA-FILE-PATH", false, true),
-        OUTPUT_FORMATS("formats", "f", false, "Optional, case-insensitive, comma separated list of output formats. Supported formats are TSV, XML, GFF3 and HTML. Default for protein sequences are TSV, XML and GFF3, or for nucleotide sequences GFF3 and XML.", "OUTPUT-FORMATS", true, true),
-        BASE_OUT_FILENAME("output-file-base", "b", false, "Optional, base output filename (relative or absolute path).  Note that this option and the --outfile (-o) option are mutually exclusive.  The appropriate file extension for the output format(s) will be appended automatically. By default the input file path/name will be used.", "OUTPUT-FILE-BASE", false, true),
-        OUTPUT_FILE("outfile", "o", false, "Optional explicit output file name (relative or absolute path).  Note that this option and the --output-file-base (-b) option are mutually exclusive. If this option is given, you MUST specify a single output format using the -f option.  The output file name will not be modified. Note that specifying an output file name using this option OVERWRITES ANY EXISTING FILE.", "EXPLICIT_OUTPUT_FILENAME", false, true),
-        OUTPUT_DIRECTORY("output-dir", "d", false, "Optional, output directory.  Note that this option and the --outfile (-o) option or the --output-file-base (-b) option are mutually exclusive. The appropriate file extension for the output format(s) will be appended automatically. By default the input file path/name will be used.", "OUTPUT-DIR", false, true),
-        ANALYSES("applications", "appl", false, "Optional, comma separated list of analyses.  If this option is not set, ALL analyses will be run. ", "ANALYSES", true, true),
-        PRIORITY("priority", "p", false, "Minimum message priority that the worker will accept (0 low -> 9 high).", "JMS-PRIORITY", false, false),
-        IPRLOOKUP("iprlookup", "iprlookup", false, "Switch on look up of corresponding InterPro annotation.", null, false, true),
-        GOTERMS("goterms", "goterms", false, "Optional, switch on look up of corresponding Gene Ontology annotation (IMPLIES -iprlookup option)", null, false, true),
-        PATHWAY_LOOKUP("pathways", "pa", false, "Optional, switch on look up of corresponding Pathway annotation (IMPLIES -iprlookup option)", null, false, true),
-        MASTER_URI("masteruri", "masteruri", false, "The TCP URI of the Master.", "MASTER-URI", false, false),
-        MASTER_MAXLIFE("mastermaxlife", "mastermaxlife", false, "The maximum lifetime of the Master.", "MASTER-MAXLIFE", false, false),
-        SEQUENCE_TYPE("seqtype", "t", false, "Optional, the type of the input sequences (dna/rna (n) or protein (p)).  The default sequence type is protein.", "SEQUENCE-TYPE", false, true),
-        MIN_SIZE("minsize", "ms", false, "Optional, minimum nucleotide size of ORF to report. Will only be considered if n is specified as a sequence type. " +
-                "Please be aware of the fact that if you specify a too short value it might be that the analysis takes a very long time!", "MINIMUM-SIZE", false, true),
-        TEMP_DIRECTORY_NAME("tempdirname", "td", false, "Optional, used to start up a worker with the correct temporary directory.", "TEMP-DIR-NAME", false, false),
-        TEMP_DIRECTORY("tempdir", "T", false, "Optional, specify temporary file directory (relative or absolute path). The default location is temp/.", "TEMP-DIR", false, true),
-        DISABLE_PRECALC("disable-precalc", "dp", false, "Optional.  Disables use of the precalculated match lookup service.  All match calculations will be run locally.", null, false, true),
-        HIGH_MEM("highmem", "hm", false, "Optional, switch on the creation of a high memory worker. Please note normal and high mem workers share the same Spring configuration file.", null, false, false),
-        TIER1("tier1", "tier1", false, "Optional, switch to indicate the high memory worker is a child of the master.", "TIER", false, false),
-        CLUSTER_RUN_ID("clusterrunid", "crid", false, "Optional, switch to specify the Project name for this i5 run.", "CLUSTER-RUN-ID", false, false),
-        USER_DIR("userdir", "u", false, "The base directory for results (if absolute paths not specified)", "USER_DIRECTORY", false, false);
-
-        private String longOpt;
-
-        private boolean multipleArgs;
-
-        private String shortOpt;
-
-        private boolean required;
-
-        private String description;
-
-        private String argumentName;
-
-        private boolean includeInUsageMessage;
-
-        private I5Option(
-                String longOpt,
-                String shortOpt,
-                boolean required,
-                String description,
-                String argumentName,
-                boolean multipleArgs,
-                boolean includeInUsageMessage
-        ) {
-            this.longOpt = longOpt;
-            this.shortOpt = shortOpt;
-            this.required = required;
-            this.description = description;
-            this.argumentName = argumentName;
-            this.multipleArgs = multipleArgs;
-            this.includeInUsageMessage = includeInUsageMessage;
-        }
-
-        public String getLongOpt() {
-            return longOpt;
-        }
-
-        public String getShortOpt() {
-            return shortOpt;
-        }
-
-        public boolean isRequired() {
-            return required;
-        }
-
-        public String getDescription() {
-            return description;
-        }
-
-        public String getArgumentName() {
-            return argumentName;
-        }
-
-        public boolean hasMultipleArgs() {
-            return multipleArgs;
-        }
-
-        public boolean isIncludeInUsageMessage() {
-            return includeInUsageMessage;
-        }
-    }
-
-    private enum Mode {
-        //Mode for InterPro production
-        MASTER("master", "spring/jms/master/production-master-context.xml"),
-        //?
-        WORKER("distributedWorkerController", "spring/jms/activemq/activemq-distributed-worker-context.xml"),
-        DISTRIBUTED_WORKER("distributedWorkerController", "spring/jms/worker/distributed-worker-context.xml"),
-        HIGHMEM_WORKER("distributedWorkerController", "spring/jms/activemq/activemq-distributed-worker-highmem-context.xml"),
-        //Default mode. Mode to run the I5 black box version
-        STANDALONE("standalone", "spring/jms/activemq/activemq-standalone-master-context.xml"),
-        //This mode allows spawning of distributed workers on demand using the new i5jms architecture
-        DISTRIBUTED_MASTER("distributedMaster", "spring/jms/master/distributed-master-context.xml"),
-        CLUSTER("distributedMaster", "spring/jms/master/distributed-master-context.xml"),
-        GRID("distributedMaster", "spring/jms/master/distributed-master-context.xml"),
-        SINGLESEQ("ssOptimisedBlackBoxMaster", "spring/jms/master/singleseq-optimised-master-context.xml"),
-        CL_MASTER("clDist", "spring/jms/activemq/command-line-distributed-master-context.xml"),
-        CL_WORKER("distributedWorkerController", "spring/jms/activemq/cl-dist-worker-context.xml"),
-        CL_HIGHMEM_WORKER("distributedWorkerController", "spring/jms/activemq/cl-dist-high-mem-worker-context.xml"),
-        INSTALLER("installer", "spring/installer/installer-context.xml"),
-        // Use this mode for creating the test database that lives in /jms-implementation/src/test/resources/
-        EMPTY_INSTALLER("installer", "spring/installer/empty-installer-context.xml"),
-        //This mode is for converting I5 XML files into an other output format supported by I5 and I4 XML as well (additional option)
-        CONVERT("convert", "spring/converter/converter-context.xml"),
-        //Use this mode to send shutdown commands to the master (monitoring or cluster version) or to get runtime statistics like submitted/finished jobs.
-        MONITOR("monitorApplication", "spring/jms/monitoring/monitor-context.xml");
-
-
-        private String contextXML;
-
-        private String runnableBean;
-
-        private static String commaSepModeList;
-
-        static {
-            StringBuilder sb = new StringBuilder();
-            for (Mode mode : Mode.values()) {
-                if (sb.length() > 0) sb.append(", ");
-                sb.append(mode.toString().toLowerCase());
-            }
-            commaSepModeList = sb.toString();
-        }
-
-        /**
-         * Constructor for modes.
-         *
-         * @param runnableBean Optional bean that implements Runnable.
-         * @param contextXml   being the Spring context.xml file to load.
-         */
-        private Mode(String runnableBean, String contextXml) {
-            this.runnableBean = runnableBean;
-            this.contextXML = contextXml;
-        }
-
-        public String getRunnableBean() {
-            return runnableBean;
-        }
-
-        public String getContextXML() {
-            return contextXML;
-        }
-
-        public static String getCommaSepModeList() {
-            return commaSepModeList;
-        }
-    }
-
-    private static final Mode DEFAULT_MODE = Mode.STANDALONE;
-
 
     static {
         //Usual I5 options
@@ -265,23 +85,22 @@ public class Run {
 
             COMMAND_LINE_OPTIONS.addOption(option);
 
-            if (i5Option.includeInUsageMessage) {
-                COMMAND_LINE_OPTIONS_FOR_HELP.addOption(option);
-            }
         }
     }
 
+
     public static void main(String[] args) {
         // create the command line parser
+
         CommandLineParser parser = new PosixParser();
         String modeArgument = null;
+        Mode mode = null;
         try {
             // parse the command line arguments
             CommandLine parsedCommandLine = parser.parse(COMMAND_LINE_OPTIONS, args);
 
             modeArgument = parsedCommandLine.getOptionValue(I5Option.MODE.getLongOpt());
 
-            Mode mode = null;
             try {
                 mode = (modeArgument != null)
                         ? Mode.valueOf(modeArgument.toUpperCase())
@@ -290,6 +109,15 @@ public class Run {
                 LOGGER.fatal("The mode '" + modeArgument + "' is not handled.  Should be one of: " + Mode.getCommaSepModeList());
                 System.exit(1);
             }
+
+            for (Option option : (Collection<Option>)COMMAND_LINE_OPTIONS.getOptions()) {
+                final String shortOpt = option.getOpt();
+                if (I5Option.showOptInHelpMessage(shortOpt, mode)) {
+                    COMMAND_LINE_OPTIONS_FOR_HELP.addOption(option);
+                }
+            }
+
+
             System.out.println(Utilities.getTimeNow() + " Welcome to InterProScan 5RC7");
             //String config = System.getProperty("config");
             if (LOGGER.isInfoEnabled()) {
@@ -316,7 +144,7 @@ public class Run {
                 final Map<Job, JobStatusWrapper> deactivatedJobs = jobs.getDeactivatedJobs();
                 //Info about active and de-active jobs is shown in the manual instruction (help) as well
                 if (isInvalid(mode, parsedCommandLine)) {
-                    printHelp();
+                    printHelp(COMMAND_LINE_OPTIONS_FOR_HELP);
                     System.out.println("Available analyses:");    // LEAVE as System.out
                     for (Job job : jobs.getAnalysisJobs().getJobList()) {
                         // Print out available jobs
@@ -450,7 +278,7 @@ public class Run {
 
         } catch (ParseException exp) {
             LOGGER.fatal("Exception thrown when parsing command line arguments.  Error message: " + exp.getMessage());
-            printHelp();
+            printHelp(COMMAND_LINE_OPTIONS_FOR_HELP);
             System.exit(1);
         }
     }
@@ -472,8 +300,8 @@ public class Run {
      */
     private static void exitI5(final Mode mode, final int status) {
         if (mode.equals(Mode.CONVERT)) {
-            buildConvertModeOptions();
-            printConvertModeHelp();
+//            buildConvertModeOptions();
+            printHelp(COMMAND_LINE_OPTIONS_FOR_HELP);
             System.exit(status);
         }
     }
@@ -614,19 +442,16 @@ public class Run {
                                                   final String[] parsedOutputFormats,
                                                   String defaultOutputFileName) {
 
-        //Get the value for the (-i) option
-        if (parsedCommandLine.hasOption(I5Option.FASTA.getLongOpt())) {
-
-            String fastaFilePath = parsedCommandLine.getOptionValue(I5Option.FASTA.getLongOpt());
+        // Get the value for the (-i) option (could be FASTA file, or in CONVERT mode, an XML file)
+        if (parsedCommandLine.hasOption(I5Option.INPUT.getLongOpt())) {
+            String fastaFilePath = parsedCommandLine.getOptionValue(I5Option.INPUT.getLongOpt());
             if(!fastaFilePath.equals("-")){
-                fastaFilePath = getAbsoluteFilePath(parsedCommandLine.getOptionValue(I5Option.FASTA.getLongOpt()), parsedCommandLine);
-                checkDirectoryExistenceAndWritePermission(fastaFilePath, I5Option.FASTA.getShortOpt());
+                fastaFilePath = getAbsoluteFilePath(parsedCommandLine.getOptionValue(I5Option.INPUT.getLongOpt()), parsedCommandLine);
+                checkDirectoryExistenceAndWritePermission(fastaFilePath, I5Option.INPUT.getShortOpt());
             }
             master.setFastaFilePath(fastaFilePath);
             defaultOutputFileName = new File(fastaFilePath).getName();
         }
-
-//        String defaultFileOutputName = "i5_convert_mode_output.out";
 
         //Get the value for the (-b) option is specified
         boolean haveSetBaseOutputFileName = false;
@@ -690,14 +515,20 @@ public class Run {
             master.setOutputFormats(parsedOutputFormats);
         }
 
-        //Set temporary directory
-        final String filePath;
+        // Set temporary directory
+        String filePath;
         if (parsedCommandLine.hasOption(I5Option.TEMP_DIRECTORY.getLongOpt())) {
             filePath = parsedCommandLine.getOptionValue(I5Option.TEMP_DIRECTORY.getLongOpt());
         } else {
-            filePath = "temp/";
+            filePath = master.getTemporaryDirectory();
+            if (filePath == null) {
+                filePath = "temp/"; // Default
+            }
         }
         final String temporaryDirectory = getAbsoluteFilePath(filePath, parsedCommandLine);
+        if (parsedCommandLine.hasOption(I5Option.TEMP_DIRECTORY.getLongOpt())) {
+            checkDirectoryExistenceAndWritePermission(temporaryDirectory, I5Option.TEMP_DIRECTORY.getShortOpt());
+        }
         master.setTemporaryDirectory(temporaryDirectory);
     }
 
@@ -720,54 +551,6 @@ public class Run {
             }
         }
     }
-
-    /**
-     * Checks if the specified output directory exists, and that the supplied file path is writable
-     * If either of these tests fails, InterProScan 5 will exit.
-     *
-     * @param filePath
-     * @return
-     */
-    private static void checkDirectoryExistenceAndWritePermission(final String filePath, final String option) {
-        String parent = new File(filePath).getParent();
-        if (option.equals(I5Option.TEMP_DIRECTORY.getShortOpt())) {
-            parent = filePath;
-        }
-        File dir = new File(parent);
-        File file = new File(filePath);
-        if (!dir.exists()) {
-            System.out.println("For the (-" + option + ") option you specified a location which doesn't exist:");
-            System.out.println(dir);
-            System.exit(2);
-        }
-        if (file.exists()) {
-            if (!file.canWrite()) {
-                System.out.println("Can write test.");
-                System.out.println("For the (-" + option + ") option you specified a location which cannot be written to:");
-                System.out.println(file);
-                System.exit(2);
-            }
-        } else {
-            //Do a file creation and deletion file test
-            boolean fileCreated = false;
-            boolean fileDeleted = false;
-            try {
-                fileCreated = file.createNewFile();
-                fileDeleted = file.delete();
-                if (!fileCreated || !fileDeleted) {
-                    System.out.println("Create and delete test.");
-                    System.out.println("For the (-" + option + ") option you specified a location which cannot be written to:");
-                    System.out.println(file);
-                    System.exit(2);
-                }
-            } catch (IOException e) {
-                LOGGER.error("File creation test. Cannot create the specified output file!\n" +
-                        "Specified output file path (absolute): " + file.getAbsolutePath(), e);
-                throw new IllegalStateException("For the (-" + option + ") option you specified a location which cannot be written to:", e);
-            }
-        }
-    }
-
 
     private static void checkIfDistributedWorkerAndConfigure(final Runnable runnable,
                                                              final CommandLine parsedCommandLine,
@@ -871,7 +654,7 @@ public class Run {
 
                 long masterClockTime = Long.valueOf(masterClockTimeStr.trim());
                 long masterLifeRemaining = Long.valueOf(masterLifeRemainingStr.trim());
-                if (LOGGER.isInfoEnabled()) {
+                if (LOGGER.isDebugEnabled()) {
                     LOGGER.info("masterclock time: " + masterClockTime + " master life remaining: " + masterLifeRemaining);
                 }
                 worker.setCurrentMasterClockTime(masterClockTime);
@@ -1107,15 +890,6 @@ public class Run {
         }
     }
 
-
-    private static void printHelp() {
-        HELP_FORMATTER.printHelp(HELP_MESSAGE_TITLE, HEADER, COMMAND_LINE_OPTIONS_FOR_HELP, FOOTER);
-    }
-
-    private static void printConvertModeHelp() {
-        HELP_FORMATTER.printHelp(HELP_MESSAGE_TITLE, HEADER, COMMAND_LINE_OPTIONS_FOR_CONVERT_MODE_HELP, FOOTER);
-    }
-
     /**
      * Checks to see if a specific port is available.
      * Checks for use both TCP and UDP use of ports.
@@ -1162,40 +936,12 @@ public class Run {
             if (options[0].getLongOpt() == I5Option.USER_DIR.getLongOpt()) {
                 return true;
             }
-        } else if (!commandline.hasOption(I5Option.FASTA.getLongOpt())) {
-            if (mode.equals(Mode.CONVERT) || mode.equals(Mode.SINGLESEQ) || mode.equals(Mode.STANDALONE) || mode.equals(Mode.DISTRIBUTED_MASTER) || mode.equals(Mode.CLUSTER)) {
+        } else if (!commandline.hasOption(I5Option.INPUT.getLongOpt())) {
+            if (mode.equals(Mode.SINGLESEQ) || mode.equals(Mode.STANDALONE) || mode.equals(Mode.DISTRIBUTED_MASTER) || mode.equals(Mode.CLUSTER) || mode.equals(Mode.CONVERT)) {
                 return true;
             }
         }
         return false;
     }
 
-    private static void buildConvertModeOptions() {
-        //Convert mode options
-        for (Converter.ConvertModeOption convertModeOption : Converter.ConvertModeOption.values()) {
-            OptionBuilder builder = OptionBuilder.withLongOpt(convertModeOption.getLongOpt())
-                    .withDescription(convertModeOption.getDescription());
-            if (convertModeOption.isRequired()) {
-                builder = builder.isRequired();
-            }
-            if (convertModeOption.getArgumentName() != null) {
-                builder = builder.withArgName(convertModeOption.getArgumentName());
-                if (convertModeOption.hasMultipleArgs()) {
-                    builder = builder.hasArgs();
-                } else {
-                    builder = builder.hasArg();
-                }
-            }
-
-            builder = builder.withValueSeparator();
-
-            final Option option = (convertModeOption.getShortOpt() == null)
-                    ? builder.create()
-                    : builder.create(convertModeOption.getShortOpt());
-
-            if (convertModeOption.isIncludeInUsageMessage()) {
-                COMMAND_LINE_OPTIONS_FOR_CONVERT_MODE_HELP.addOption(option);
-            }
-        }
-    }
 }
